--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend && npm install --prefix admin && npm run build --prefix admin",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
